ATX-288: Add popup after submitting feeding survey

--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
@@ -552,7 +552,10 @@
   },
   "Survey": {
     "Self": "{{ firstName }}-Registrierungsprozess",
-    "NewParticipant": "New Participant-Registrierungsprozess"
+    "NewParticipant": "New Participant-Registrierungsprozess",
+    "ThankYouPopup": {
+      "Text": "de_Thank you for submitting the survey"
+    }
   },
   "Toolkit": {
     "ActivityActions": {
