--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ja.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ja.json
@@ -552,7 +552,10 @@
   },
   "Survey": {
     "Self": "{{ firstName }} の登録プロセス",
-    "NewParticipant": "New Participant の登録プロセス"
+    "NewParticipant": "New Participant の登録プロセス",
+    "ThankYouPopup": {
+      "Text": "ja_Thank you for submitting the survey"
+    }
   },
   "Toolkit": {
     "ActivityActions": {
