--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
@@ -552,7 +552,10 @@
   },
   "Survey": {
     "Self": "{{ firstName }}proces rekrutacji uczestnika",
-    "NewParticipant": "New Participantproces rekrutacji uczestnika"
+    "NewParticipant": "New Participantproces rekrutacji uczestnika",
+    "ThankYouPopup": {
+      "Text": "pl_Thank you for submitting the survey"
+    }
   },
   "Toolkit": {
     "ActivityActions": {
