--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pt.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pt.json
@@ -552,7 +552,10 @@
   },
   "Survey": {
     "Self": "{{ firstName }}- processo de inscrição",
-    "NewParticipant": "New Participant- processo de inscrição"
+    "NewParticipant": "New Participant- processo de inscrição",
+    "ThankYouPopup": {
+      "Text": "pt_Thank you for submitting the survey"
+    }
   },
   "Toolkit": {
     "ActivityActions": {
