--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
@@ -552,7 +552,10 @@
   },
   "Survey": {
     "Self": "Процесс регистрации {{ firstName }}",
-    "NewParticipant": "Процесс регистрации New Participant"
+    "NewParticipant": "Процесс регистрации New Participant",
+    "ThankYouPopup": {
+      "Text": "ru_Thank you for submitting the survey"
+    }
   },
   "Toolkit": {
     "ActivityActions": {
