--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
@@ -552,7 +552,10 @@
   },
   "Survey": {
     "Self": "{{ firstName }} Kayıt Süreci",
-    "NewParticipant": "New Participant Kayıt Süreci"
+    "NewParticipant": "New Participant Kayıt Süreci",
+    "ThankYouPopup": {
+      "Text": "tr_Thank you for submitting the survey"
+    }
   },
   "Toolkit": {
     "ActivityActions": {
