rarex | change home button text

--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -14,7 +14,7 @@
   },
   "Footer": {
     "Links": {
-      "Home": "Home",
+      "Home": "RARE-X.org",
       "TermsAndConditions": "Terms and Conditions",
       "PrivacyPolicy": "Privacy Policy"
     }
