--- a/ddp-workspace/projects/ddp-esc/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-esc/src/assets/i18n/en.json
@@ -271,16 +271,20 @@
         "InitialSurvey": "Initial intake survey",
         "DataUse": {
             "Text": "How to use the data browser:",
-            "List": {
-                "Item1": "On a computer, hover your cursor over any chart to see more information.",
-                "Item2": "Click (or tap, on a mobile device) on any part of a chart to filter the entire browser to a subset of patients. The number of patients you have filtered down to is displayed in the upper left-hand corner.",
-                "Item3": "Click or tap it again to remove the filter.",
-                "Item4": "Using the toolbar in the bottom right corner of the browser, you can undo or redo your last action, reset all filters, or download an image of the browser."
-            }
+            "List": [
+                "On a computer, hover your cursor over any chart to see more information.",
+                "Click (or tap, on a mobile device) on any part of a chart to filter the entire browser to a subset of patients. The number of patients you have filtered down to is displayed in the upper left-hand corner.",
+                "Click or tap it again to remove the filter.",
+                "Using the toolbar in the bottom right corner of the browser, you can undo or redo your last action, reset all filters, or download an image of the browser."
+            ]
         },
         "Updated": "This data will be updated periodically as new patients join the project and as new surveys are deployed. If you have any questions or feedback, please email",
         "ThankYou": "Thank you to every patient who has said <span class=\"Italic\">Count Me In</span> and generously shared their experiences, information, and samples to accelerate discoveries.",
-        "Video": "Data Browser Walkthrough",
+        "Video": {
+            "Part1": "Here is a",
+            "Link": "walkthrough video",
+            "Part2": "on how to use the interactive data browser to explore the survey data."
+        },
         "Tableau": "ESC Data Browser"
     },
     "Toolkit": {
